# rota-manager

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api_schema.yml  compose.local.yaml  compose.yaml  shell.nix
.sqlx/: query-1533589086894f42e0da11b0dcb726ee4673bf6a85985606e6dc2c6851c56ebb.json  query-2492a7d9d9e3d2e00d666963c656095b3202c43105309df3d0d46beb0e9be325.json  query-3081d74fdfc4329f9e093946b85b23afe09d21a5c6a2194acdd14db35b2e1d0a.json  query-32daca6450f4f72335c0edda67d85df83a2bab2a742c99f2acec24fe7ba65617.json  query-398ab535919f0e0649cba7fd285024c2f8809bfacb6ef70743196b0eb5070e25.json  query-45a2c9602c916c293687279a49ecf2a0a67d688cdb1e4a1c96781b25806fb123.json  query-67d5eb2964144d0f16e1b9f7ac1aad78545be3c7101b2751abcc216ea74e4f81.json  query-785b6e1ea700f7e6275e8cfbde7cfcd9dcf457cbe6d8b753cf08b17bf830dcdc.json  query-9471564441808b21af95eccb0190c352f43e92727bd3ffa9d9e16015ab3e64b5.json  query-a769a0dd5ee1ce5064b2a4ac69116b1e54a56f08c999bda61da00a4ab2968f42.json  query-c5b31693171f10f31207905ccf0bf9aceaad068bf5755b0d7001d134aeb34db6.json  query-ca8616c8aaf9a1c26d90cf24f0ace095f769003955d6647c795cc161f4a8d3f3.json  query-d3493b604fcca905a6747f65b9d429e92462603c79921ce41799f41c52c1f13f.json  query-d9c0420fb83da48fc44b13de15479f8e38077b8e1876c81eca224d8d863e8d23.json  query-d9f72a9a56994aa40d24ade613381ca57de8e6f2820f0060c7f7f908fa54b47c.json  query-df0856989ceab2bf7829b975bd74c9460d44257d336da75ca8f73d1efb4f1ab1.json  query-f9dd658fc491b85ae83798a7208b464c0740844a0928f924387df034238d7ee1.json
migrations/: 20250912134256_add_user_id_column.up.sql  (+6 more)
(+85 files in other folders)
